# storage

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
etc/: rfc.md
src/: alloc.rs  collection.rs  extension.rs  interface.rs  lib.rs  storage.rs  store.rs
src/collection/: concurrent_vec.rs  linked_list.rs  skip_list.rs  storage_box.rs  store_box.rs  store_vec.rs  utils.rs
src/extension/: sized.rs  typed.rs  typed_metadata.rs  typed_single.rs  unique.rs  unique_single.rs
src/storage/: allocator_storage.rs  inline_single_storage.rs
src/store/: allocator_store.rs  inline_bump_store.rs  inline_single_store.rs  stack_bump_store.rs
